@@ -11,6 +11,8 @@ Changes to Version 2.3-0
   o Added connect option to plot means dialog (suggestion of Graham Smith).
   
   o Added Welch F-test option to one-way ANOVA dialog.
+  
+  o The Shapiro-Wilk test for normality dialog is replaced by a more general normality-tests dialog.
 
 
 Changes to Version 2.2-4
